--- a/src/Pages/Search/SearchPackage.css
+++ b/src/Pages/Search/SearchPackage.css
@@ -5,7 +5,7 @@
     position: relative;
     background: radial-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)),
     url('../../assets/Beautifulsea.jpg') no-repeat center center/cover;
-    padding-bottom: 0rem;
+    padding-bottom: 14.75rem;
 }
 
 .search-container{
@@ -43,7 +43,7 @@
 
 .searchpackage-title{
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     -webkit-transform: translate(-50%,-50%);
     -moz-transform: translate(-50%,-50%);
@@ -76,22 +76,27 @@
 }
 
 .find_item:first-child {
-    width: 23.413%
+    width: 25.413%;
+    margin-top: 9%;
 }
 
 .find_item:nth-child(2) {
-    width: 23.413%
+    width: 25.413%;
+    margin-top: 9%;
 }
 
 .find_item:nth-child(3) {
-    width: 23.413%
+    width: 25.413%;
+    margin-top: 9%;
 }
 
 .find_item:nth-child(4) {
-    width: 10.122%
+    width: 12.122%;
+    margin-top: 9%;
 }
 .find_item:nth-child(5) {
-    width: 10.122%
+    width: 12.122%;
+    margin-top: 9%;
 }
 
 .find_item div {
@@ -171,6 +176,7 @@
     border: none;
     outline: none;
     cursor: pointer;
+    margin-top: 9%;
 }
 
 .searchpackage-search-title{
@@ -408,6 +414,28 @@ input:focus
     font-size: 12px;
 }
 
+@media (max-width: 990px)
+{
+    .searchpackage-container
+    {
+        padding-bottom: 14.2rem;
+    }
+    .searchpackage-title{
+        font-size: 65px;
+    }
+}
+
+@media (max-width: 767px)
+{
+    .searchpackage-container
+    {
+        padding-bottom: 14.2rem;
+    }
+    .searchpackage-title{
+        font-size: 56px;
+    }
+}
+
 @media (max-width: 524px)
 {
     .searchpackageform-container
@@ -435,6 +463,29 @@ input:focus
     {
         margin-left: 4rem;
     }
+    .searchpackage-title{
+        margin-top: -150px;
+        font-size: 52px;
+    }
+
+    .searchpackage-container
+    {
+        
+    }
+    .find_form {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin-top: 180px;
+    }
+
+    .find_select {
+        width: 345px;
+    }
+
+    .find_button
+    {
+        width: 345px;
+    }
 }
 
 @media (max-width: 362px)
@@ -449,6 +500,19 @@ input:focus
     {
         margin-left: 3rem;
     }
+
+    .searchpackage-title{
+        font-size: 48px;
+    }
+
+    .find_select {
+        width: 315px;
+    }
+
+    .find_button
+    {
+        width: 315px;
+    }
 }
 
 @media (max-width: 323px)
@@ -462,5 +526,18 @@ input:focus
     .searchpackageform-help
     {
         margin-left: 2rem;
+    }
+
+    .searchpackage-title{
+        font-size: 42px;
+    }
+
+    .find_select {
+        width: 285px;
+    }
+
+    .find_button
+    {
+        width: 285px;
     }
 }
